animation clipping fix

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -60,8 +60,7 @@
   background-color: black;
   padding: 0 0rem;
   margin:0 0rem;
-  max-width: 100wh;
-  max-height: 100vh;
+
 width:100wh;
 height:100vh;
 }
@@ -70,8 +69,7 @@ height:100vh;
 	 
   position: absolute;
   top: 5vh;
-  left:10vh;
-
+  left:10vw;
   padding:10px;
 	text-align: left;
 	z-index: 100;
@@ -84,6 +82,8 @@ height:100vh;
 min-width: 20rem;
 animation-name: slideinToLeft;
 animation-duration: 5s;
+white-space:nowrap;
+overflow: hidden;
 }
 
 
@@ -92,7 +92,7 @@ animation-duration: 5s;
 
 .bruh3 {
   position: absolute;
-  right:10vh;
+  right:10vw;
   bottom:10vh;
 padding:10px;
 	text-align: left;
@@ -106,26 +106,28 @@ padding:10px;
   min-width: 25rem;
   animation-name: slideinToRight;
   animation-duration: 5s;
-
+  white-space:nowrap;
+  overflow: hidden;
 }
 
 @keyframes slideinToLeft {
   from {
-    left: 100vh
+    left: 40vw;
+  
   }
 
   to {
-    left:10vh;
+    left:10vw;
   }
 }
 
 @keyframes slideinToRight {
   from {
-    right: 100vh
+    right: 40vw
   }
 
   to {
-    right:10vh;
+    right:10vw;
   }
 }
 
@@ -144,13 +146,14 @@ padding:10px;
 
   margin-top: 5vh; 
   font-size: 2rem;
-  margin-left:0;
-margin-right:0;
-left:1rem;
+
 width:10rem;
 
 min-width:0rem;
   color: white;
+
+  white-space:normal;
+  overflow:normal 
 
 }
 
@@ -158,8 +161,7 @@ min-width:0rem;
 .bruh3 {
   font-size: 2rem;
   margin-top: 25vh;
-margin-right:0;
-margin-left:0;
+
 margin-bottom:1rem;
 float:right;
 display:right;
@@ -167,7 +169,9 @@ justify-content:right;
   min-width:0rem;
   width:11rem;
   text-align:center;
-  right: 1rem;
+
+  white-space:normal;
+  overflow:normal 
 }
 
 }
